# mcpdef

./: .dockerignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  NOTICE  README.md  RELEASING.md  SECURITY.md  mcpdef.example.toml
.github/ISSUE_TEMPLATE/: config.yml  founding-tester.yml
.github/workflows/: release.yml
Formula/: mcpdef.rb
crates/mcpdef/: Cargo.toml  README.md
crates/mcpdef-audit/: Cargo.toml  README.md
crates/mcpdef-audit/src/: lib.rs
crates/mcpdef-auth/: Cargo.toml  README.md
crates/mcpdef-auth/src/: lib.rs
crates/mcpdef-auth/src/testdata/: test_jwks.json  test_priv.pem
crates/mcpdef-core/: Cargo.toml  README.md
crates/mcpdef-core/src/: lib.rs
crates/mcpdef-inspect/: Cargo.toml  README.md
crates/mcpdef-inspect/src/: lib.rs
crates/mcpdef-pin/: Cargo.toml  README.md
crates/mcpdef-pin/src/: lib.rs
crates/mcpdef-policy/: Cargo.toml  README.md
crates/mcpdef-policy/src/: lib.rs  rules.rs
crates/mcpdef-ratelimit/: Cargo.toml  README.md
crates/mcpdef-ratelimit/src/: lib.rs
crates/mcpdef-sandbox/: Cargo.toml  README.md
crates/mcpdef-sandbox/src/: component.rs  lib.rs
crates/mcpdef-sandbox/tests/fixtures/echo-component/: Cargo.toml
crates/mcpdef-sandbox/tests/fixtures/echo-component/src/: lib.rs
crates/mcpdef-sandbox/wit/: server.wit
crates/mcpdef-transport/: Cargo.toml  README.md
crates/mcpdef-transport/src/: egress.rs  http.rs  lib.rs
crates/mcpdef-transport/tests/: http_bridge.rs
crates/mcpdef/src/: admin.rs  admin_ui.html  config.rs  gateway.rs  lib.rs  listener.rs  main.rs  metrics.rs
crates/mcpdef/tests/: audit_identity.rs  cli.rs  golden_path.rs  http_auth.rs  http_gateway.rs  http_listener.rs  inspect.rs  metrics.rs  oss_boundary.rs  policy_rules.rs  ratelimit.rs  rug_pull.rs  wasm_component_gateway.rs  wasm_gateway.rs
deploy/compose/: compose.yaml  mcpdef.example.toml
deploy/grafana/: mcpdef-dashboard.json
deploy/helm/mcpdef/: Chart.yaml  values.yaml
deploy/helm/mcpdef/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: API.md  CONFIG.md  DEPLOY.md  DOCKERHUB.md  OPERATIONS.md
