[package]
name = "mcpdef-auth"
description = "MCPdef — OAuth 2.1 Resource Server: per-request JWT/JWKS bearer validation + RFC 9728 Protected Resource Metadata (OSS engine, Phase 2)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jsonwebtoken.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
# hand-craft a JWT (custom header) for the alg/key-family-mismatch test
base64 = "0.22"
