[package]
name = "mcpdef-core"
description = "MCPdef — normalized JSON-RPC 2.0 envelope + MCP method/decision types (OSS engine, Phase 1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
