[package]
name = "mcpdef-pin"
description = "MCPdef — tool-definition pinning + rug-pull detection: canonical tool-def hashing and a persistent pin store (OSS engine)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
