[package]
name = "mcpdef-policy"
description = "MCPdef — deny-by-default tool allowlist + RBAC + a policy-as-code rule engine (per-agent / per-argument allow/deny) for the OSS engine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mcpdef-core.workspace = true
serde.workspace = true
serde_json.workspace = true
